Fix the scrollbar, once and for all.

--- a/ui/static/css/global.css
+++ b/ui/static/css/global.css
@@ -25,7 +25,7 @@ body {
 /* Color changes */
 
 html {
-	overflow: auto;
+	overflow: auto !important;
 	background-color: var(--background-color) !important;
 	color: var(--text-color) !important;
 }
